<resources>

    <string name="core_string_noname">佚名</string>

    <string name="core_string_all_search_history">全部搜索记录</string>
    <string name="core_string_clear_search_history">清除搜索记录</string>
    <string name="core_string_key_value_format">%1$s : %2$s</string>
    <string name="core_string_group">group</string>
    <string name="core_string_artifact">artifact</string>
    <string name="core_string_version">version</string>
    <string name="google_maven_search">Google Maven查询</string>
    <string name="input_google_pkg_name">输入要查询的Google包名</string>
    <string name="baidu_search">百度搜索</string>
    <string name="google_search">Google</string>
    <string name="login">登录</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_account">请输入帐号</string>
    <string name="register_account">注册帐号</string>
    <string name="please_input_password_again">请再次输入密码</string>
    <string name="register">注册</string>
    <string name="go_to_login">去登录</string>
    <string name="cancel">取消</string>
    <string name="vryn_s_srchng">大家都在搜</string>
    <string name="welcome_to_use">欢迎使用</string>
    <string name="play_android">玩安卓</string>
    <string name="please_log_in">请登录</string>
    <string name="its_already_the_end">已经到底啦</string>
    <string name="click_to_retry">点击重试</string>
    <string name="txt_new">新</string>
    <string name="top">顶</string>
    <string name="i_understand_now">我已明白</string>
    <string name="ths_prmssn_s_t_nsr_">该权限为保证相关功能的正常使用,如果拒绝可能导致功能不完善甚至崩溃！</string>
    <string name="y_nd_t_mnlly_nbl_pr">您需要去应用程序设置当中手动开启权限</string>
    <string name="pls_fll_n_yr_ccnt_n">请填写账号和密码噢</string>
    <string name="y_hv_nt_lggd_n_r_yr">您尚未登录或登录已过期</string>
    <string name="home_page">首页</string>
    <string name="system">体系</string>
    <string name="qa">问答</string>
    <string name="my">我的</string>
    <string name="my_collection">我的收藏</string>
    <string name="y_mst_ntr_kywrds_f_">必须输入至少四个字符的关键字哦~</string>
    <string name="query_results">查询结果</string>
    <string name="grdl_dpndncy_hs_bn_">gradle 依赖已复制至粘贴板</string>
    <string name="language_settings">语言设置</string>
    <string name="log_out_and_log_in">退出登录</string>
    <string name="theme_skin">主题皮肤</string>
    <string name="maven_query">Maven查询</string>
    <string name="local_llm_title">本地大模型</string>
    <string name="local_llm_model_path">GGUF模型路径</string>
    <string name="local_llm_load_model">加载模型</string>
    <string name="local_llm_prompt">输入问题</string>
    <string name="local_llm_generate">生成</string>
    <string name="local_llm_stop">停止</string>
    <string name="local_llm_empty_answer">生成结果会显示在这里</string>
    <string name="id_s_points_s">ID:%1$d    积分: %2$d</string>
    <string name="r_y_sr_t_lg_t">确定退出登录？</string>
    <string name="y_hv_nt_lggd_n_yt">您尚未登录</string>
    <string name="points_ranking">积分榜单</string>
    <string name="points_rank_subtitle">实时查看玩安卓积分排行</string>
    <string name="points_rank_first">第1名</string>
    <string name="points_rank_second">第2名</string>
    <string name="points_rank_third">第3名</string>
    <string name="points_rank_score">积分 %1$d</string>
    <string name="points_rank_level">等级 %1$d</string>
    <string name="points_rank_current_user_title">我的积分</string>
    <string name="points_rank_current_user_id">用户ID %1$d</string>
    <string name="points_rank_current_user_rank">当前页排名 %1$s</string>
    <string name="points_rank_current_user_not_in_page">当前页未上榜</string>
    <string name="points_rank_current_user_login_tip">登录后可以查看你的当前积分和榜单信息</string>
    <string name="points_rank_current_user_login_action">去登录</string>
    <string name="points_rank_loading">正在加载积分榜单</string>
    <string name="points_rank_empty">暂无积分数据</string>
    <string name="points_rank_more">后续排名</string>
    <string name="points_rank_retry">重新加载</string>
    <string name="points_rank_load_failed">加载失败，请稍后重试</string>
    <string name="points_rank_back">返回</string>
    <string name="not_yet_open">暂未开放</string>
    <string name="go_log_in">去登陆</string>
    <string name="square">广场</string>
    <string name="navigation">导航</string>
    <string name="rgstrd_sccssflly">注册成功</string>
    <string name="cmmn_wbst_ddrs">常用网址</string>

</resources>
